--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <section id="PROJECT.HTML" class="py-5 bg-black text-white">
+  <section id="project.html" class="py-5 bg-black text-white">
     <div class="container">
       <h2 class="text-center mb-4">Projects</h2>
       <div class="row g-4">
